<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Product Name Category -->
    <LinearLayout
        android:id="@+id/container_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_product_name"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="@dimen/layout_width"
            android:layout_weight="2"
            android:paddingLeft="@dimen/padding_left">

            <!-- Product Name Field -->
            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

        </RelativeLayout>
    </LinearLayout>

    <!-- Product Price Category -->
    <LinearLayout
        android:id="@+id/container_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_product_price"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="@dimen/layout_width"
            android:layout_weight="2"
            android:paddingLeft="@dimen/padding_left">

            <!-- Product Price Field -->
            <EditText
                android:id="@+id/edit_product_price"
                android:hint="@string/hint_product_price"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

        </RelativeLayout>
    </LinearLayout>

    <!-- Product Quantity Category -->
    <LinearLayout
        android:id="@+id/container_product_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_product_quantity"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="@dimen/layout_width"
            android:layout_weight="2"
            android:paddingLeft="@dimen/padding_left">

            <!-- Product Quantity Field -->
            <EditText
                android:id="@+id/edit_product_quantity"
                android:hint="@string/hint_product_quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

        </RelativeLayout>
    </LinearLayout>

    <!-- Supplier Name Category -->
    <LinearLayout
        android:id="@+id/container_supplier_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_supplier_name"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="@dimen/layout_width"
            android:layout_weight="2"
            android:paddingLeft="@dimen/padding_left">

            <!-- Supplier Name Field -->
            <EditText
                android:id="@+id/edit_supplier_name"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

        </RelativeLayout>
    </LinearLayout>

    <!-- Supplier Phone Number Category -->
    <LinearLayout
        android:id="@+id/container_supplier_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_supplier_phone_number"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="@dimen/layout_width"
            android:layout_weight="2"
            android:paddingLeft="@dimen/padding_left">

            <!-- Supplier Phone Number Field -->
            <EditText
                android:id="@+id/edit_supplier_phone_number"
                android:hint="@string/hint_supplier_phone_number"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_increase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="increaseQuantity"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/increaseQuantity" />

    <Button
        android:id="@+id/button_decrease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="decreaseQuantity"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/decreaseQuantity" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="deleteProduct"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/deleteProduct" />

    <Button
        android:id="@+id/button_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="callSupplier"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/callSupplier" />


</LinearLayout>